[package]
name = "no"
version = "0.1.0"
authors = ["Heitor de Bittencourt <heitorpbittencourt@gmail.com>"]
license = "GPL-2.0-only"
description = "Like yes, but different"
edition = "2021"
readme = "README.md"
repository = "https://github.com/heitorPB/no"
keywords = ["cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
signal-hook = "0.3.14"
